--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,9 @@
 				<b>This is just a place holder, so you can see what the site would look like</b>You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forums</a>.
 			</p>
 			<img src="images/presentation.jpg" alt="">
+
+			zqdqzdqzdqzdqzdwwdwzwd
+
 			<p>
 				Aliquam vel mollis magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus rutrum facilisis elit. Phasellus faucibus, diam nec tristique tempor, nisi felis elementum mi, vel porttitor dolor urna vel arcu.
 			</p>
