j'ai fais marcher le truc

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 				<a href="process.html">process</a>
 			</li>
 			<li>
-				<a href="blog.html">blog</a>
+				<a href="blog.php">blog</a>
 			</li>
 			<li class="selected">
 				<a href="about.html">about</a>
